<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.amazon.aws.am2</groupId>
    <artifactId>app-server-migration</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <main.class>com.amazon.aws.am2.appmig.estimate.Main</main.class>
        <maven.compiler.source>8</maven.compiler.source>
		<maven.compiler.target>8</maven.compiler.target>
		<antlr.version>4.9.2</antlr.version>
		<maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
		<maven.jar.plugin.version>3.1.1</maven.jar.plugin.version>
		<maven.surefire.plugin.version>2.22.1</maven.surefire.plugin.version>
    </properties>

    <build>
        <plugins>
        	<plugin>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>${antlr.version}</version>
				<configuration>
					<sourceDirectory>${basedir}</sourceDirectory>
					<includes>
						<include>src/main/resources/Java8Lexer.g4</include>
						<include>src/main/resources/Java8Parser.g4</include>
					</includes>
					<visitor>false</visitor>
					<listener>true</listener>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>antlr4</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>${project.basedir}/target/generated-sources/antlr4</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>${main.class}</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!-- ... -->
                    <archive>
                        <manifest>
                            <mainClass>${main.class}</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
	<dependency>
	   <groupId>com.opencsv</groupId>
	   <artifactId>opencsv</artifactId>
	   <version>5.3</version>
	</dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-io</artifactId>
            <version>1.3.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.9</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.17.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.17.1</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.29</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.29</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>3.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.thymeleaf</groupId>
            <artifactId>thymeleaf</artifactId>
            <version>3.0.11.RELEASE</version>
        </dependency>
        <dependency>
	   <groupId>org.json</groupId>
	   <artifactId>json</artifactId>
	   <version>20231013</version>
	</dependency>
	<dependency>
	   <groupId>org.neo4j.driver</groupId>
	   <artifactId>neo4j-java-driver</artifactId>
	   <version>4.1.1</version>
	</dependency>
	<dependency>
	   <groupId>com.arangodb</groupId>
	   <artifactId>arangodb-java-driver</artifactId>
	   <version>6.14.0</version>
	</dependency>
	<dependency>
	   <groupId>org.antlr</groupId>
	   <artifactId>antlr4</artifactId>
	   <version>${antlr.version}</version>
	</dependency>
	<dependency>
   	   <groupId>org.tmatesoft.svnkit</groupId>
	   <artifactId>svnkit</artifactId>
   	   <version>1.10.5</version>
	</dependency>
	<dependency>
	   <groupId>org.antlr</groupId>
	   <artifactId>antlr4-runtime</artifactId>
	   <version>${antlr.version}</version>
	</dependency>
    </dependencies>
</project>
